welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:4: error: not found: value aSmime
   return (aSmile && bSmile) || !(aSmime && bSmile)
                                  ^